# rk-rs

./: Cargo.toml  README.md  justfile  release.toml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: cli.rs  error.rs  lib.rs
app/src/cli/: command.rs  context.rs
app/src/cli/command/: api_resource.rs  basic.rs  cluster.rs  config.rs  configmap.rs  delete.rs  get.rs  node.rs  secret.rs  troubleshoot.rs
app/src/cli/command/basic/: create.rs
app/src/cli/command/basic/create/: clusterrole.rs  secret.rs
app/src/cli/command/basic/create/secret/: generic.rs
app/src/cli/command/node/: resources.rs
app/src/cli/command/troubleshoot/: auth.rs  debug.rs
app/src/cli/command/troubleshoot/auth/: cani.rs  whoami.rs
args/: Cargo.toml
args/src/: kv.rs
ext/: Cargo.toml
ext/src/: b64.rs  lib.rs  service.rs
ext/src/b64/: decode.rs
features/: Cargo.toml
features/src/: lib.rs
kubeapi/: Cargo.toml
kubeapi/src/: apis.rs  cache.rs  dryrun.rs  features.rs  info.rs  kubeconfig.rs  lib.rs  options.rs  params.rs  raw.rs  server.rs  version.rs
resource/: Cargo.toml
resource/src/: lib.rs
rk/: Cargo.toml
rk-args/: Cargo.toml
rk-args/src/: kv.rs  lib.rs
rk-args/src/kv/: envfile.rs  file.rs
rk-ext/: Cargo.toml
rk-ext/src/: b64.rs  lib.rs  pod.rs
rk-ext/src/b64/: encode.rs
rk-features/: Cargo.toml
rk-kubeapi/: Cargo.toml
rk-kubeapi/src/: info.rs  kubeconfig.rs  lib.rs  resource.rs  version.rs
rk-kubeapi/src/resource/: named.rs
rk-resource/: Cargo.toml
rk-resource/src/: lib.rs  named.rs
rk-ui/: Cargo.toml
rk-ui/src/: lib.rs  show.rs
rk-ui/src/show/impls/: feature.rs
rk/src/: cli.rs  ext.rs  kubectl.rs  lib.rs
rk/src/cli/: command.rs  context.rs
rk/src/cli/command/: api_resource.rs  auth.rs  basic.rs  cascade.rs  config.rs  delete.rs  get.rs  node.rs  secret.rs
rk/src/cli/command/auth/: cani.rs  whoami.rs
rk/src/cli/command/basic/: create.rs
rk/src/cli/command/basic/create/: clusterrole.rs  namespace.rs  secret.rs
rk/src/cli/command/basic/create/secret/: docker.rs  tls.rs
rk/src/ext/: apiresource.rs  component.rs  container.rs
rk/src/kubectl/: features.rs  info.rs  version.rs
rk/src/resource/: named.rs
rk/src/show/: params.rs
rk/src/show/impls/: componentstatus.rs  configmap.rs  feature.rs  node.rs  objectlist.rs
rkubectl/: Cargo.toml
rkubectl/src/: main.rs
src/: cli.rs  ext.rs  kubectl.rs  lib.rs  namespace.rs  output.rs  resource.rs  show.rs
src/cli/: args.rs  command.rs  output.rs  resource.rs
src/cli/args/: file.rs
src/cli/command/: api_resource.rs  auth.rs  basic.rs  config.rs  delete.rs  dryrun.rs  get.rs  node.rs
src/cli/command/auth/: cani.rs
src/cli/command/basic/: create.rs
src/cli/command/basic/create/: clusterrole.rs  namespace.rs  secret.rs
src/cli/command/basic/create/secret/: docker.rs  generic.rs
src/cli/command/node/: image.rs
src/ext/: namespace.rs  pod.rs
src/kubectl/: cache.rs  features.rs  info.rs  kubeconfig.rs  version.rs
src/output/: impls.rs
src/output/impls/: configmap.rs  node.rs  objectlist.rs  pod.rs
src/resource/: impls.rs  named.rs
src/show/: impls.rs  params.rs
src/show/impls/: accessreview.rs  componentstatus.rs  configmap.rs  created.rs  namespace.rs  node.rs  objectlist.rs  pod.rs  subjectreview.rs
ui/: Cargo.toml
ui/src/: convert.rs  lib.rs  show.rs
ui/src/show/: impls.rs
ui/src/show/impls/: accessreview.rs  componentstatus.rs  configmap.rs  created.rs  feature.rs  namespace.rs  node.rs  objectlist.rs  pod.rs  service.rs  subjectreview.rs
