[workspace]
members = [
    "app",
    "args",
    "ext",
    "features",
    "kubeapi",
    "resource",
    "ui",
    "rkubectl",
]
resolver = "3"


[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
keywords = ["k8s", "kubernetes", "kubectl", "cli", "tool"]
repository = "https://github.com/rkubectl"
readme = "README.md"


[workspace.dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "wrap_help", "unstable-v5"] }
etcetera = "0.10.0"
futures-util = "0.3"
indexmap = "2.9"
k8s-openapi = { version = "0.26", features = ["latest", "schemars"] }
k8s-openapi-ext = "0.26.0"
kube = { version = "2.0", default-features = false, features = [
    "client",
    "rustls-tls",
    "aws-lc-rs",
] }
kube-client-ext = "2.0.0"
miette = { version = "7.6", features = ["fancy", "serde"] }
prometheus-parse = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
size = "0.5"
tabled = "0.20"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rkubectl-app = { path = "./app" }
rkubectl-args = { path = "./args" }
rkubectl-ext = { path = "./ext" }
rkubectl-features = { path = "./features" }
rkubectl-kubeapi = { path = "./kubeapi" }
rkubectl-resource = { path = "./resource" }
rkubectl-ui = { path = "./ui" }


[workspace.lints.rust]
deprecated = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
future_incompatible = "warn"
deprecated_in_future = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
unused = "warn"
warnings = "deny"


[workspace.lints.clippy]
use_self = "warn"
map_unwrap_or = "warn"
map_flatten = "warn"
