[workspace]
members = [
    "app",
    "args",
    "ext",
    "features",
    "kubeapi",
    "resource",
    "ui",
    "rkubectl",
]
resolver = "3"


[workspace.package]
version = "0.0.0-alpha.4"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
keywords = ["k8s", "kubernetes", "kubectl", "cli", "tool"]
repository = "https://github.com/rkubectl"
readme = "README.md"


[workspace.dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "wrap_help", "unstable-v5"] }
etcetera = "0.11"
flate2 = "1.1"
futures-util = "0.3"
heck = "0.5"
indexmap = "2.9"
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }
k8s-openapi-ext = "0.27"
kube = { version = "3.0", default-features = false, features = [
    "client",
    "rustls-tls",
    "aws-lc-rs",
] }
kube-client-ext = "3.0"
miette = { version = "7.6", features = ["fancy", "serde"] }
prometheus-parse = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
size = "0.5"
tabled = "0.20"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rkubectl-app = { version = "0.0.0-alpha.4", path = "./app" }
rkubectl-args = { version = "0.0.0-alpha.4", path = "./args" }
rkubectl-ext = { version = "0.0.0-alpha.4", path = "./ext" }
rkubectl-features = { version = "0.0.0-alpha.4", path = "./features" }
rkubectl-kubeapi = { version = "0.0.0-alpha.4", path = "./kubeapi" }
rkubectl-resource = { version = "0.0.0-alpha.4", path = "./resource" }
rkubectl-ui = { version = "0.0.0-alpha.4", path = "./ui" }


[workspace.lints.rust]
deprecated = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
future_incompatible = "warn"
deprecated_in_future = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
unused = "warn"
warnings = "deny"


[workspace.lints.clippy]
use_self = "warn"
map_unwrap_or = "warn"
map_flatten = "warn"
