[package]
name = "rkubectl-app"
description = "The application logic for rkubectl, a Kubernetes CLI tool"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true

metadata.docs.rs.workspace = true


[dependencies]
clap.workspace = true
indexmap.workspace = true
k8s-openapi.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true
miette.workspace = true
serde.workspace = true
size.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

rkubectl-args.workspace = true
rkubectl-ext.workspace = true
rkubectl-kubeapi.workspace = true
rkubectl-resource.workspace = true
rkubectl-ui.workspace = true


[lints]
workspace = true
