[package]
name = "rkubectl-args"
description = "Argument parsing for rkubectl, a Kubernetes CLI tool"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
clap.workspace = true
k8s-openapi-ext.workspace = true


[lints]
workspace = true


[package.metadata.docs.rs]
features = ["k8s-openapi/latest"]
