[package]
name = "rkubectl-ext"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
base64.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true


[lints]
workspace = true
