[package]
name = "rkubectl-ext"
description = "Extension traits for rkubectl, a Kubernetes CLI tool"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
base64.workspace = true
k8s-openapi.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true


[lints]
workspace = true


[package.metadata.docs.rs]
features = ["k8s-openapi/latest"]
