[package]
name = "rkubectl-features"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
prometheus-parse.workspace = true
serde.workspace = true
tabled.workspace = true


[lints]
workspace = true
