[package]
name = "rkubectl-features"
description = "Kubernetes features support for rkubectl, a Kubernetes CLI tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
prometheus-parse.workspace = true
serde.workspace = true
tabled.workspace = true


[lints]
workspace = true
