[package]
name = "rkubectl-kubeapi"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
clap.workspace = true
etcetera.workspace = true
futures-util.workspace = true
indexmap.workspace = true
k8s-openapi.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true
kube-client-ext.workspace = true
prometheus-parse.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

rkubectl-ext.workspace = true
rkubectl-features.workspace = true
rkubectl-ui.workspace = true


[lints]
workspace = true
