[package]
name = "rkubectl-resource"
description = "Kubernetes resource argument handling for rkubectl, a Kubernetes CLI tool"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
k8s-openapi.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true
kube-client-ext.workspace = true
thiserror.workspace = true

rkubectl-ext.workspace = true
rkubectl-kubeapi.workspace = true
rkubectl-ui.workspace = true


[lints]
workspace = true


[package.metadata.docs.rs]
features = ["k8s-openapi/latest"]
