[package]
name = "rk-args"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
base64.workspace = true
clap.workspace = true
k8s-openapi-ext.workspace = true


[lints]
workspace = true
