[package]
name = "rk-resource"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
k8s-openapi.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true
kube-client-ext.workspace = true
thiserror.workspace = true

rk-ext.workspace = true
rk-kubeapi.workspace = true
rk-ui.workspace = true


[lints]
workspace = true
