[package]
name = "rk-ui"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
clap.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tabled.workspace = true

rk-ext.workspace = true
rk-features.workspace = true

[lints]
workspace = true
