[package]
name = "rk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
base64.workspace = true
clap.workspace = true
etcetera.workspace = true
futures-util.workspace = true
indexmap.workspace = true
k8s-openapi.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true
kube-client-ext.workspace = true
prometheus-parse.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
size.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

rk-args.workspace = true
rk-ext.workspace = true
rk-features.workspace = true


[lints]
workspace = true
