[package]
name = "rk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
clap.workspace = true
indexmap.workspace = true
k8s-openapi.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true
miette.workspace = true
serde.workspace = true
size.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

rk-args.workspace = true
rk-ext.workspace = true
rk-kubeapi.workspace = true
rk-resource.workspace = true
rk-ui.workspace = true


[lints]
workspace = true
