[package]
name = "rkubectl"
description = "A Kubernetes CLI tool written in Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
kube.workspace = true
miette.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

rkubectl-app.workspace = true


[lints]
workspace = true
