[package]
name = "rkubectl-ui"
description = "User interface components for rkubectl, a Kubernetes CLI tool"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
clap.workspace = true
heck.workspace = true
k8s-openapi-ext.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tabled.workspace = true

rkubectl-ext.workspace = true
rkubectl-features.workspace = true


[lints]
workspace = true


[package.metadata.docs.rs]
features = ["k8s-openapi/latest"]
